LPD-48867 buildRest
